fix(v-radio-group): fixed row wrap on smaller screens

--- a/src/stylus/components/_radio-group.styl
+++ b/src/stylus/components/_radio-group.styl
@@ -14,6 +14,7 @@ theme(radiogroup, "radio-group")
   &--row
     .v-input--radio-group__input
       flex-direction: row
+      flex-wrap: wrap
 
   &--column
     .v-input--radio-group__input
